코딩 룰 추가 및 적용